project(labeler-interfaces)

set(LABELER_INTERFACES_VERSION_MAJOR 1)
set(LABELER_INTERFACES_VERSION_MINOR 0)
set(LABELER_INTERFACES_VERSION_PATCH 0)

# Thin compatibility shim — interfaces now live in dsfw-ui-core.
add_library(${PROJECT_NAME} INTERFACE)

target_link_libraries(${PROJECT_NAME} INTERFACE dsfw-ui-core)

target_compile_definitions(${PROJECT_NAME} INTERFACE
    LABELER_INTERFACES_VERSION_MAJOR=${LABELER_INTERFACES_VERSION_MAJOR}
    LABELER_INTERFACES_VERSION_MINOR=${LABELER_INTERFACES_VERSION_MINOR}
    LABELER_INTERFACES_VERSION_PATCH=${LABELER_INTERFACES_VERSION_PATCH}
)
