add_subdirectory(chart-framework)
add_subdirectory(audio-visualizer)
add_subdirectory(data-sources)
add_subdirectory(bridges)
add_subdirectory(log-page)
add_subdirectory(settings)
add_subdirectory(min-label-editor)
add_subdirectory(mouth-curve-chart)
add_subdirectory(phoneme-editor)
add_subdirectory(pitch-editor)
